[Dice] Only show the sync promo account icon when migrated to Dice

The account icon of the first sync promo account is now only
shown in the avatar toolbar when the profile is fully migrated to Dice.

Bug: 889325
Change-Id: I75dfbbc4cbf24d94e42d3b243dce15cb857066f0
Reviewed-on: https://chromium-review.googlesource.com/1249268
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594793}(cherry picked from commit 6639421d9118cce99df235a3fe3045e1454ade17 [formerly 8244a2fde499f6dd4d8e5c754c2a4643ee94e4cb])
Reviewed-on: https://chromium-review.googlesource.com/1252801
Reviewed-by: Thomas Tangl <tangltom@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#750}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 2e2f9c59a3ead0f4110b4d4866e419cfde40ce71